[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylstraight"
authors = [{ name = "Takenori Yoshimura" }]
maintainers = [
  { name = "Takenori Yoshimura", email = "takenori@sp.nitech.ac.jp" },
]
description = "An unofficial Python reimplementation of the legacy-STRAIGHT"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
  "speech analysis",
  "speech synthesis",
  "signal processing",
  "vocoder",
  "straight",
]
license = { text = "Apache 2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["numpy >= 1.20.3", "scipy >= 1.7.0", "soundfile >= 0.10.2"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "codespell",
  "mdformat",
  "numpydoc",
  "pkginfo",
  "pydata-sphinx-theme",
  "pytest",
  "pytest-cov",
  "ruff",
  "sphinx",
  "twine",
]

[project.urls]
Documentation = "https://takenori-y.github.io/pylstraight/latest/"
Source = "https://github.com/takenori-y/pylstraight"

[tool.hatch.build.targets.sdist]
only-include = ["pylstraight"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pylstraight/version.py"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # Dynamically typed expressions are disallowed
  "C901",    # Function is too complex
  "COM812",  # The following rules may cause conflicts when used with the formatter
  "D100",    # Missing docstring in public module
  "D104",    # Missing docstring in public package
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "DOC501",  # Raised exception missing from docstring
  "ERA001",  # Found commented-out code
  "N802",    # Function name should be lowercase
  "N803",    # Argument name should be lowercase
  "N806",    # Variable in function should be lowercase
  "ISC001",  # The following rules may cause conflicts when used with the formatter
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0914", # Too many local variables
  "PLR0915", # Too many statements
  "PLR0917", # Too many positional arguments
  "PLR2004", # Magic value used in comparison
  "S101",    # Use of `assert` detected
  "SIM300",  # Yoda condition detected
  "T201",    # `print` found
]
preview = true
exclude = ["__init__.py"]

[tool.pyright]
reportCallIssue = false
reportMissingImports = false
reportPossiblyUnboundVariable = false

[tool.codespell]
skip = "./docs/build,./tools"
ignore-multiline-regex = "codespell:ignore-begin.*codespell:ignore-end"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pytest.fail",
  "except",
  "msg",
  "raise",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report xml -s -x"
